--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
         <button class="btn again">Again!</button>
         <div class="number">?</div>
     </header>
-    <section>
-        
+    <section class="left">
+        <input type="number" class="guess" />
+        <button class="btn check">Check!</button>
     </section>
 </body>
 </html>
